[package]
name = "dpf_lattice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
ctr = "0.9.2"
byteorder = "1.4.3"
ndarray = "0.15.6"
openssl = "0.10.45"
rand = "0.8.5"
rand_core = "0.6.4"
ndarray-rand = "0.14.0"
array2d = "0.3.0"
packed_struct = "0.10.1"
packed-integers = "0.1.2"
bytemuck = "1.13.1"
